# FlaskCasSaml

./: .gitignore  MANIFEST.in  README.md  app.py  sample_config.py  setup.cfg
FlaskCasSaml/: CasTicketManager.py  URNmanager.py  __init__.py  casSaml_request.py  cas_response.py  cas_server.py
FlaskCasSaml/views/: base.html  cas_loggedin.html  cas_loggedout.html  v2_auth_failure.xml  v2_auth_success.xml  v2_proxy_failure.xml  v2_proxy_success.xml  v3_cas_saml_error.xml  v3_cas_saml_success.xml
FlaskCasSaml/views/css/: proj.css  spinner.css
examples/: sample_config.py
src/: FlaskCasSaml
