[metadata]
name=FlaskCasSaml
version=22.03.03
author = gunville
author_email = rk13088@yahoo.com
description = Flask-based CAS Server using SAML authentication
long_description = file: README.md
long_description_content_type = text/markdown
license_files = License.txt
url = https://github.com/Glocktober/FlaskCasSaml
project_urls =
    repo = https://github.com/Glocktober/FlaskCasSaml
    overview = https://github.com/Glocktober/FlaskCasSaml/blob/master/README.md
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Bottle
keywords='Flask CAS SAML bridge'
[options]
package_dir = 
    = src
packages = find:
install_requires =
    Flask
    Flask-Session
    defusedxml
    FlaskSamlSP
    requests
python_requires = >=3.6
[options.package_data]
* = *.xml, *.html, *.css, *.js
[options.data_files]
example =
    examples/sample_config.py
    exmples/sample_flask_cas_saml.py
[options.packages.find]
where = src
